# ydata-sdk

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CNAME  CODE_OF_CONDUCT.md  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.py  versions.json
.github/: semantic.yml
.github/ISSUE_TEMPLATE/: bugfix-request.md  chore-request.md  feature-request.md
.github/workflows/: docs.yaml  merge-main.yaml  pull-request.yaml  release.yaml  sonarqube.yaml
0.0/: 404.html  index.html  objects.inv  sitemap.xml
0.0/getting-started/connectors_datasources/: index.html
0.0/getting-started/get_started_synthetic/: index.html
0.0/getting-started/installation/: index.html
0.0/getting-started/quickstart/: index.html
0.0/reference/api/: index.html
0.0/reference/changelog/: index.html
0.0/search/: search_index.json
0.0/support/help-troubleshooting/: index.html
0.1/: index.html  objects.inv
0.1/examples/synthesize_tabular_data/: index.html
0.1/getting-started/installation/: index.html
0.1/getting-started/quickstart/: index.html
0.1/modules/connectors/: index.html
0.1/modules/synthetic_data/: index.html
0.1/reference/api/: index.html
0.1/search/: search_index.json
0.10/: objects.inv
0.10/data_catalog/connectors/: index.html
0.10/data_catalog/datasources/: index.html
0.10/get-started/: index.html
0.10/get-started/create_pipeline/: index.html
0.10/get-started/fabric_community/: index.html
0.10/sdk/installation/: index.html
0.10/sdk/quickstart/: index.html
0.10/search/: search_index.json
0.10/support/help-troubleshooting/: index.html
0.11/: 404.html  index.html
0.11/data_catalog/: index.html
0.11/data_catalog/connectors/: index.html
0.11/data_catalog/datasources/: index.html
0.11/get-started/create_database_sd_generator/: index.html
0.11/get-started/create_lab/: index.html
0.11/get-started/create_multitable_dataset/: index.html
0.11/get-started/create_pipeline/: index.html
0.11/get-started/create_syntheticdata_generator/: index.html
0.11/get-started/fabric_community/: index.html
0.11/get-started/upload_csv/: index.html
0.11/sdk/: index.html
0.11/sdk/installation/: index.html
0.11/sdk/quickstart/: index.html
0.11/search/: search_index.json
0.11/support/help-troubleshooting/: index.html
0.12/: 404.html  index.html
0.12/data_catalog/: index.html
0.12/data_catalog/connectors/: index.html
0.12/data_catalog/datasources/: index.html
0.12/deployment_and_security/: index.html
0.12/deployment_and_security/security/: index.html
0.12/get-started/: index.html
0.12/get-started/create_database_sd_generator/: index.html
0.12/get-started/create_lab/: index.html
0.12/get-started/create_multitable_dataset/: index.html
0.12/get-started/create_pipeline/: index.html
0.12/get-started/create_syntheticdata_generator/: index.html
0.12/get-started/fabric_community/: index.html
0.12/get-started/upload_csv/: index.html
0.12/integrations/: index.html
0.12/labs/: index.html
0.12/labs/overview/: index.html
0.12/pipelines/: index.html
0.12/pipelines/concepts/: index.html
0.12/sdk/: index.html
0.12/search/: search_index.json
0.12/synthetic_data/: index.html
0.13/data_catalog/: index.html
0.13/deployment_and_security/: index.html
0.13/get-started/: index.html
0.13/pipelines/: index.html
0.13/search/: search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.2/search/: search_index.json
0.3/: index.html  sitemap.xml
0.4/: 404.html  index.html  sitemap.xml
0.4/search/: search_index.json
0.5/: 404.html  objects.inv
0.5/search/: search_index.json
0.6/: 404.html  index.html  objects.inv
0.6/sdk/: index.html
0.6/search/: search_index.json
0.7/: objects.inv
0.7/get-started/: index.html
0.7/search/: search_index.json
0.8/: 404.html  index.html
0.8/get-started/: index.html
0.8/sdk/: index.html
0.8/search/: search_index.json
0.9/: 404.html
0.9/sdk/: index.html
0.9/search/: search_index.json
1.0/: 404.html  index.html  objects.inv
1.0/data_catalog/: index.html
1.0/deployment_and_security/: index.html
1.0/get-started/: index.html
1.0/integrations/: index.html
1.0/labs/: index.html
1.0/pipelines/: index.html
1.0/sdk/: index.html
1.0/search/: search_index.json
1.0/stylesheets/: extra.css
1.0/synthetic_data/: index.html
docs/: README.md  index.md
docs/data_catalog/: connectors_and_datasets.md  data_profiling.md  index.md  overview_warnings.md  pii.md  supported_integrations.md
docs/examples/: synthesize_tabular_data.md  synthesize_timeseries_data.md  synthesize_with_anonymization.md  synthesize_with_conditional_sampling.md  synthesize_with_privacy_control.md  synthesizer_multitable.md
docs/get-started/: create_database_sd_generator.md  create_lab.md  create_multitable_dataset.md  create_pipeline.md  create_syntheticdata_generator.md  fabric_community.md  index.md  upload_csv.md
docs/getting-started/: installation.md  quickstart.md
docs/getting_started/: data_catalog.md  labs.md  pipelines.md  quickstart.md  sdk.md  synthetic_data.md
docs/integrations/: index.md
docs/labs/: index.md  overview.md
docs/modules/: connectors.md  synthetic_data.md
docs/pipelines/: concepts.md  index.md  runs.md
docs/sdk/: index.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/support/: help-troubleshooting.md
docs/synthetic_data/: best_practices.md  index.md
examples/: synthesizer_from_datasource.py  synthesizer_from_pandas.py
examples/data/: dummy.csv
examples/synthesizers/: anonymize_example.py  conditional_sampling_example.py  multi_table_quickstart.py  multi_table_sample_write_override.py  privacy_example.py  regular_quickstart.py  time_series_quickstart.py  timeseries_simple.py  update_datatypes.py
latest/data_catalog/: index.html
latest/get-started/: index.html
latest/sdk/: index.html
src/ydata-sdk/: __init__.py
tests/helpers/: mock_response.py
(+633 files in other folders)
