[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=67.4.0,<68.0.0",
    "setuptools-scm>=7.1.0,<8.0.0",
    "wheel>=0.38.4,<1.0.0",
]

[project]
name = "ydata-sdk"
authors = [
    {name = "YData", email = "opensource@ydata.ai"},
]
description = "YData SDK allows to use the *Data-Centric* tools from the YData ecosystem to accelerate AI development"
readme = "README.md"
requires-python = ">=3.8,<3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Financial and Insurance Industry',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
dynamic = [
    "version",
]
dependencies = [
    "httpx==0.23.3",
    "ydata-core>=0.2.0",
    "pandas>=1.5.0",
    "prettytable==3.6.0",
    "pydantic==1.10.9",
    "typeguard==2.13.3",
    "ydata-datascience"
]

[project.license]
file = "LICENSE"

[project.urls]
Home = "https://github.com/ydataai/ydata-sdk"

[project.optional-dependencies]
dev = [
    "twine",
    "build",
    "pylint==2.15.10",
    "black==22.12.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "pre-commit==2.20.0",
    "pyc_wheel==1.2.7",
    "mypy==1.3.0",
]
doc = [
    "mkdocs>=1.4.2,<1.5.2",
    "mkdocs-material>=9.0.12,<9.2.7",
    "mkdocs-material-extensions>=1.1.1,<2.0.0",
    "mike>=1.1.2,<2.0.0",
    "mkdocstrings[python]>=0.20.0,<1.0.0",
]
test = [
    "pytest==6.2.5",
    "pytest-bdd==4.0.*",
    "pytest-cov==2.11.*",
    "pytest-xdist==2.2.*",
    "pytest-mccabe>=2.0.0,<3.0.0",
]

[tool.setuptools.dynamic]
version = { attr = "ydata.sdk.__version__" }

[tool.setuptools.package-data]
"*" = [
    "VERSION",
    "*.pyi",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ydata.sdk*"]

[tool.pytest.ini_options]
mccabe-complexity = 10

[tool.pytest]
norecursedirs = "tests/helpers"

[tool.pylint]
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 7
min-public-methods = 2
max-public-methods = 20
max-module-lines = 1000
max-line-length = 120
disable = [
    "W0511", # fixme
    "W0311", # bad-indentation
    "C0330", # bad-continuation
    "R0903", # too-few-public-methods
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/examples/*", "*setup.py", "*/build/*"]
